fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -144,14 +144,6 @@ body {
   font-size: 40px;
 }
 
-.clearfix {
-  &::after {
-    display: block;
-    content: "";
-    clear: both;
-  }  
-}
-
 .software li {
   font-weight: 200;
 }
@@ -177,8 +169,6 @@ body {
 }
 
 .shape {
-  padding-left: 250px;
-  padding-right: 250px;
   font-size: 20px;
 }
 
